<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagen"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tvSuperhero"
        style="@style/CodeFontMedium"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/ivAvatar"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tvRealName"
        style="@style/CodeFontSmall"
        android:layout_below="@+id/tvSuperhero"
        android:layout_toEndOf="@+id/ivAvatar"
        tools:text="@string/fullName" />

    <TextView
        android:id="@+id/tvPublisher"
        style="@style/CodeFontSmall"
        android:textStyle="italic"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        tools:text="@string/publisher" />

</RelativeLayout>