<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.game.title.TitleActivity">

        <TextView
            android:id="@+id/title_text"
            style="@style/CodeFontMedium"
            android:text="@string/title_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linea1_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/linea1_text"
            style="@style/CodeFontMedium"
            android:text="@string/linea1_text"
            app:layout_constraintTop_toTopOf="@+id/title_text"
            app:layout_constraintBottom_toTopOf="@+id/linea2_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/linea2_text"
            style="@style/CodeFontMedium"
            android:text="@string/linea2_text"
            app:layout_constraintTop_toBottomOf="@+id/linea1_text"
            app:layout_constraintBottom_toTopOf="@+id/play_game_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/play_game_button"
            style="@style/CodeButtonSmall"
            android:layout_marginTop="64dp"
            android:text="@string/play_button"
            app:layout_constraintTop_toBottomOf="@+id/linea2_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>